Updated Tabulator - not really tested but no large changes were made that I'm aware of (or at least no backwards incompatible ones) Made screen maker current design re-scale nicely - height is fixed but small and will add scrollbar once window is too small - width is variable but columns have a minimum width, scrollbar added once smalle than this Added missing id to generated factors groups from selected wells

--- a/static/styles/screen_maker.css
+++ b/static/styles/screen_maker.css
@@ -23,9 +23,10 @@
     height: 145px;
 }
 
-#current-maker-body {
-    padding: 20px 0;
-    width: 100%;
+#holder-for-current-maker-tabulator {
+    width: min(100%, 750px);
+    height: min(calc(100% - 245px), 420px);
+    margin: 20px auto;
 }
 
 #screen-maker-type-button-div {
